# grafos

./: .gitignore  README.md  pyproject.toml
graph/: app.py  graph.py  reader.py  t1_e2_breadth_first.py  t1_e2_eulerian_cycle.py  t1_e3_eulerian_cycle.py  t1_e4_bellman_ford.py  t1_e5_floyd_warshall.py  t2_e1_strongly_connected_component.py  t2_e2_topology.py  t2_e3_prim.py
graph_solver/: app.py  graph.py  p2_e4.py  reader.py  t1_e2_breadth_first.py  t2_e1_strongly_connected_component.py  t2_e2_topology.py  t3_e1_edmonds_karp.py  t3_e1_edmongds_karp.py  t3_e2_hopcroft_karp.py  t3_e3_vertex_coloring.py
test/: graph1.txt  graph2.txt  graph4.txt  graph5.txt  graph6.txt  graph7.txt  graph8.txt  test_ex1.py  test_ex2.py
